Remove absolute positioning of sortable spot image to make the height dynamic and avoid overlap with numbering

--- a/wp-content/themes/fundawande/css/theme/areas/_single-quiz-questions.scss
+++ b/wp-content/themes/fundawande/css/theme/areas/_single-quiz-questions.scss
@@ -324,7 +324,6 @@
                 text-align: center;
 
                 ._sortable-spot {
-                    position: absolute;
                     display: flex;
                     align-items: center;
                     justify-content: center;
